...

  return (
    <Container>
      <SectionList
        contentContainerStyle={{ padding: 24 }}
        ListHeaderComponent={
          <View testID="account-header-component">
            <Typography.H color={colors.red}>{'Profile'}</Typography.H>
            <View style={{ flexDirection: 'row', alignItems: 'center', paddingTop: 24 }}>
              <ImageInput
                imageUri={imageUri}
                onChangeImage={onChangeImage}
                placeholder={require("../assets/default_user.png")}
...
          />
        )}
        ItemSeparatorComponent={() => <HLine />}
      />
      <View style={{ margin: 10 }}>
        <Button.BtnContain
          testID="log-out-button"
          label="Log Out"
          color={colors.black}
          size="small"
          disabled={false}
          onPress={logout} />
      </View>
...
