...
  return (
    <Container>
      <NavBar
        onPress={() => props.navigation.goBack()} />
      <SubContainer>
        <Ionicons name="mail" size={120} color="#4b0082" />
        <H>Login Link Sent</H>
        <H />
        <H4>Please click the login link sent to</H4>
        <H4 bold> {email}.</H4>
        <H4>Do check your spam/junk mailboxes too.</H4>
        <H />
        <InlineText>
...
