...
        showAvatarForEveryMessage={false}
        showUserAvatar={false}
        onSend={onSend}
        scrollToBottom
        alwaysShowSend
        messagesContainerStyle={styles.messagesContainer}
        textInputProps={{ testID: 'messageInput' }}
        renderSend={(props) => (
          <Send {...props} containerStyle={styles.sendContainer}>
            <View testID="send-button">
              <Ionicons name="send" size={32} color="purple" />
            </View>
          </Send>
        )}
        renderComposer={(props) => (
          <Composer
...
