...
  };

  return (
    <Container>
      <FlatList
        ListHeaderComponent={
          <Header testID="messages-header-component">
            <H color={colors.red}>Messages</H>
            <P color={colors.black}>{messages.length == 0 ? 'You have no open conversations' : null}</P>
          </Header>
        }
        data={messages}
        keyExtractor={(_, index) => index.toString()}
...
