...
export const NavBarChat = ({ nav, avatar, placeholder, name, onPress, testID }) => {
  return (
    <Container >
      <OtherUserInfo>
        <View style={{ left: 10 }}>
          <Btn.BtnCircle
            testID={testID || 'back-button4'}
            iconName={nav}
            color={'white'}
            size={30}
            onPress={onPress}
          />
        </View>
...
